--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -894,6 +894,12 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
     :delight)
 #+END_SRC
 
+**** Getting started
+Create file ~.tern-project~ in project home directory. Visit
+~.tern-project~. Expand snippet ~browser~ or ~node~.
+
+For more information, see [[https://ternjs.net/doc/manual.html#configuration][Project configuration (Tern)]].
+
 *** xref-js2 - Jump to definition & references
 [[https://github.com/NicolasPetton/xref-js2][xref-js2 (GitHub)]]
 
