--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -930,8 +930,8 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
 #+END_SRC
 
 **** Getting started
-Create new file ~.tern-project~ in project home directory. Visit
-~.tern-project~. Expand snippet ~browser~ or ~node~.
+Create then visit file ~.tern-project~ in project home directory.
+Expand snippet ~browser~ or ~node~.
 
 For more information, see [[https://ternjs.net/doc/manual.html#configuration][Project configuration (Tern)]].
 
