[emacs] Improve setup company backends.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -562,10 +562,11 @@ whitespace mode.
      ("C-p" . company-select-previous))
     :hook (prog-mode . company-mode)
     :preface
-    (defun koek-cpny/set-backends (backends)
-      "Set backends of current to BACKENDS.
+    (defun koek-cpny/make-setup-backends (backends)
+      "Return function to setup backends for current.
   BACKENDS is a list of backends, see `company-backends'."
-      (setq-local company-backends backends))
+      (lambda ()
+        (setq-local company-backends backends)))
 
     (defvar-local koek-cpny/resume nil
       "Whether whitespace-mode should be re-enabled or not.")
@@ -920,10 +921,10 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
     (unbind-key "M-." tern-mode-keymap)
     (unbind-key "M-," tern-mode-keymap)
 
-    (add-hook 'tern-mode-hook
-              (apply-partially #'koek-cpny/set-backends
-                               '((company-tern company-keywords company-files
-                                  :with company-yasnippet))))
+    (add-hook
+     'tern-mode-hook
+     (koek-cpny/make-setup-backends '((company-tern company-keywords company-files
+                                       :with company-yasnippet))))
     (add-hook 'tern-mode-hook #'koek-xref/setup-js2-backend)
     :delight)
 #+END_SRC
@@ -958,9 +959,8 @@ For more information, see [[https://ternjs.net/doc/manual.html#configuration][Pr
     :mode (rx (or ".json" "/.tern-project") string-end)
     :config
     (add-hook 'json-mode-hook
-              (apply-partially #'koek-cpny/set-backends
-                               '((company-dabbrev company-files
-                                  :with company-yasnippet)))))
+              (koek-cpny/make-setup-backends '((company-dabbrev company-files
+                                                :with company-yasnippet)))))
 #+END_SRC
 
 ** Org
@@ -1075,9 +1075,9 @@ For more information, see [[https://ternjs.net/doc/manual.html#configuration][Pr
     :config
     (add-hook
      'geiser-mode-hook
-     (apply-partially #'koek-cpny/set-backends
-                      '((geiser-company-backend company-keywords company-files
-                         :with company-yasnippet)))))
+     (koek-cpny/make-setup-backends
+      '((geiser-company-backend company-keywords company-files
+         :with company-yasnippet)))))
 
   (use-package geiser-autodoc
     :defer t
