--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -31,6 +31,18 @@ Declare variables and functions setup by [[file:init.el][init.el]].
 
 * Files
 
+** dired - File manager
+#+BEGIN_SRC emacs-lisp
+  (use-package dired
+    :bind
+    ("C-c f f" . dired)
+    :config
+    (setq dired-dwim-target t)
+    ;; For switches supported by ls-lisp, see
+    ;; `ls-lisp--insert-directory'
+    (setq dired-listing-switches "-lah"))
+#+END_SRC
+
 ** projectile - Projects
 [[https://github.com/bbatsov/projectile][projectile (GitHub)]]
 
